# OOP_LABS

./: CMakeLists.txt
Labs1/Zadaca1/: transaction.cpp
Labs1/Zadaca2/: Vehicle.cpp
Labs1/Zadaca3/: Kniga.cpp
Labs10/Zadaca1/: SocialNetwork.cpp
Labs10/Zadaca2/: Race.cpp
Labs3/Zadaca1/: MobilePhone.cpp
Labs3/Zadaca2/: Subject.cpp
Labs3/Zadaca3/: TechCompany.cpp
Labs4/Zadaca1/: DisciplinaryAction.cpp
Labs4/Zadaca2/: Classroom.cpp
Labs5/Zadaca1/: Mebel_Kolok1_2023.cpp
Labs5/Zadaca2/: RideApp_Kolok1_2023.cpp
Labs6/Zadaca1/: DisciplinaryAction_2.cpp
Labs6/Zadaca2/: Book.cpp
Labs7/Zadaca1/: Kvadrat.cpp
Labs7/Zadaca2/: Marathon.cpp
Labs8/Zadaca1/: HotelRoom.cpp
Labs8/Zadaca2/: FoodItem.cpp
Labs9/Zadaca1/: Employee_Payable.cpp
Labs9/Zadaca2/: Course.cpp
